# website-using-flask

./: README.md  app.py  pyproject.toml
templates/: courceitems.html  cources.html  footer.html  home.html  jobitems.html  nav.html
